@@ -109,35 +109,35 @@ $notations = array (
 		'starttag'    => '[abc]',
 		'endtag'      => '[/abc]',
 		'classname'   => 'abcRender',
-		'includefile' => 'class.abc.inc.php',
+		'includefile' => 'notation/abc.php',
 		'progs'       => array ('ABCM2PS_BIN')),
 	'guido'    => array (
 		'regex'       => '~\[guido\](.*?)\[/guido\]~si',
 		'starttag'    => '[guido]',
 		'endtag'      => '[/guido]',
 		'classname'   => 'guidoRender',
-		'includefile' => 'class.guido.inc.php',
+		'includefile' => 'notation/guido.php',
 		'progs'       => array ()),
 	'lilypond' => array (
 		'regex'       => '~\[lilypond\](.*?)\[/lilypond\]~si',
 		'starttag'    => '[lilypond]',
 		'endtag'      => '[/lilypond]',
 		'classname'   => 'lilypondRender',
-		'includefile' => 'class.lilypond.inc.php',
+		'includefile' => 'notation/lilypond.php',
 		'progs'       => array ('LILYPOND_BIN')),
 	'mup'      => array (
 		'regex'       => '~\[mup\](.*?)\[/mup\]~si',
 		'starttag'    => '[mup]',
 		'endtag'      => '[/mup]',
 		'classname'   => 'mupRender',
-		'includefile' => 'class.mup.inc.php',
+		'includefile' => 'notation/mup.php',
 		'progs'       => array ('MUP_BIN')),
 	'pmw'      => array (
 		'regex'       => '~\[pmw\](.*?)\[/pmw\]~si',
 		'starttag'    => '[pmw]',
 		'endtag'      => '[/pmw]',
 		'classname'   => 'pmwRender',
-		'includefile' => 'class.pmw.inc.php',
+		'includefile' => 'notation/pmw.php',
 		'progs'       => array ('PMW_BIN')),
 );
 
